Sculpt Scene Spacing Distance breaks brush strength with Adjust Strength for Spacing enabled #69875

Closed
opened 2019-09-14 17:08:38 +02:00 by Floatharr · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-13 22:12, hash: 0547a77536
Worked: 2.81 (sub 11), branch: master, commit date: 2019-09-13 09:50, hash: a2b52dc571

Short description of error
Some change probably during 2019-09-13 broke brush strength when Spacing Distance set to Scene, and Adjust Strength for Spacing is on (default).

Exact steps for others to reproduce the error
Default startup.blend, reset to factory defaults.

  • Subdivide the cube
  • Try to sculpt, works fine
  • Set Spacing Distance to Scene, strength reduced to nearly zero, first dab is in full strength

No issue if Adjust Strength for Spacing is unticked

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-13 22:12, hash: `0547a77536` Worked: 2.81 (sub 11), branch: master, commit date: 2019-09-13 09:50, hash: `a2b52dc571` **Short description of error** Some change probably during 2019-09-13 broke brush strength when Spacing Distance set to Scene, and Adjust Strength for Spacing is on (default). **Exact steps for others to reproduce the error** Default startup.blend, reset to factory defaults. - Subdivide the cube - Try to sculpt, works fine - Set Spacing Distance to Scene, strength reduced to nearly zero, first dab is in full strength No issue if Adjust Strength for Spacing is unticked
Author

Added subscriber: @Floatharr

Added subscriber: @Floatharr
Pablo Dobarro was assigned by Brecht Van Lommel 2019-09-18 19:08:22 +02:00

This issue was referenced by a9d3e95bea

This issue was referenced by a9d3e95bea0c7b6e0577d38eea841b3886df814f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69875
No description provided.