Fix T69875: Sculpt Scene Spacing breaks with Adjust Strength for Spacing enabled

Reviewed By: jbakker

Maniphest Tasks: T69875

Differential Revision: https://developer.blender.org/D5849